Use celery client instead of directly posting to message queue. Rename submission_image to submission_data_url at service level. Use uuid (string) as datatype for benchmark ID in submissions API.
