# ai4realnet_orchestrators/fab_clientlib/models/submissions_post_request.py
@@ -11,7 +11,6 @@
     Do not edit the class manually.
 """  # noqa: E501
 
-
 from __future__ import annotations
 import pprint
 import re  # noqa: F401
@@ -22,71 +21,72 @@ from typing import Any, ClassVar, Dict, List, Optional, Union
 from typing import Optional, Set
 from typing_extensions import Self
 
+
 class SubmissionsPostRequest(BaseModel):
+  """
+  SubmissionsPostRequest
+  """  # noqa: E501
+  name: Optional[StrictStr] = Field(default=None, description="Display name of submission.")
+  benchmark: Optional[StrictStr] = Field(default=None, description="ID of benchmark this submission belongs to.")
+  submission_data_url: Optional[StrictStr] = Field(default=None, description="URL of submission executable image.")
+  code_repository: Optional[StrictStr] = Field(default=None, description="URL of submission code repository.")
+  tests: Optional[List[Union[StrictFloat, StrictInt]]] = Field(default=None, description="IDs of tests to run.")
+  __properties: ClassVar[List[str]] = ["name", "benchmark", "submission_data_url", "code_repository", "tests"]
+
+  model_config = ConfigDict(
+    populate_by_name=True,
+    validate_assignment=True,
+    protected_namespaces=(),
+  )
+
+  def to_str(self) -> str:
+    """Returns the string representation of the model using alias"""
+    return pprint.pformat(self.model_dump(by_alias=True))
+
+  def to_json(self) -> str:
+    """Returns the JSON representation of the model using alias"""
+    # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+    return json.dumps(self.to_dict())
+
+  @classmethod
+  def from_json(cls, json_str: str) -> Optional[Self]:
+    """Create an instance of SubmissionsPostRequest from a JSON string"""
+    return cls.from_dict(json.loads(json_str))
+
+  def to_dict(self) -> Dict[str, Any]:
+    """Return the dictionary representation of the model using alias.
+
+    This has the following differences from calling pydantic's
+    `self.model_dump(by_alias=True)`:
+
+    * `None` is only added to the output dict for nullable fields that
+      were set at model initialization. Other fields with value `None`
+      are ignored.
     """
-    SubmissionsPostRequest
-    """  # noqa: E501
-    name: Optional[StrictStr] = Field(default=None, description="Display name of submission.")
-    benchmark: Optional[Union[StrictFloat, StrictInt]] = Field(default=None, description="ID of benchmark this submission belongs to.")
-    submission_image: Optional[StrictStr] = Field(default=None, description="URL of submission executable image.")
-    code_repository: Optional[StrictStr] = Field(default=None, description="URL of submission code repository.")
-    tests: Optional[List[Union[StrictFloat, StrictInt]]] = Field(default=None, description="IDs of tests to run.")
-    __properties: ClassVar[List[str]] = ["name", "benchmark", "submission_image", "code_repository", "tests"]
+    excluded_fields: Set[str] = set([
+    ])
 
-    model_config = ConfigDict(
-        populate_by_name=True,
-        validate_assignment=True,
-        protected_namespaces=(),
+    _dict = self.model_dump(
+      by_alias=True,
+      exclude=excluded_fields,
+      exclude_none=True,
     )
+    return _dict
 
-    def to_str(self) -> str:
-        """Returns the string representation of the model using alias"""
-        return pprint.pformat(self.model_dump(by_alias=True))
+  @classmethod
+  def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
+    """Create an instance of SubmissionsPostRequest from a dict"""
+    if obj is None:
+      return None
 
-    def to_json(self) -> str:
-        """Returns the JSON representation of the model using alias"""
-        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
-        return json.dumps(self.to_dict())
+    if not isinstance(obj, dict):
+      return cls.model_validate(obj)
 
-    @classmethod
-    def from_json(cls, json_str: str) -> Optional[Self]:
-        """Create an instance of SubmissionsPostRequest from a JSON string"""
-        return cls.from_dict(json.loads(json_str))
-
-    def to_dict(self) -> Dict[str, Any]:
-        """Return the dictionary representation of the model using alias.
-
-        This has the following differences from calling pydantic's
-        `self.model_dump(by_alias=True)`:
-
-        * `None` is only added to the output dict for nullable fields that
-          were set at model initialization. Other fields with value `None`
-          are ignored.
-        """
-        excluded_fields: Set[str] = set([
-        ])
-
-        _dict = self.model_dump(
-            by_alias=True,
-            exclude=excluded_fields,
-            exclude_none=True,
-        )
-        return _dict
-
-    @classmethod
-    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
-        """Create an instance of SubmissionsPostRequest from a dict"""
-        if obj is None:
-            return None
-
-        if not isinstance(obj, dict):
-            return cls.model_validate(obj)
-
-        _obj = cls.model_validate({
-            "name": obj.get("name"),
-            "benchmark": obj.get("benchmark"),
-            "submission_image": obj.get("submission_image"),
-            "code_repository": obj.get("code_repository"),
-            "tests": obj.get("tests")
-        })
-        return _obj
+    _obj = cls.model_validate({
+      "name": obj.get("name"),
+      "benchmark": obj.get("benchmark"),
+      "submission_data_url": obj.get("submission_data_url"),
+      "code_repository": obj.get("code_repository"),
+      "tests": obj.get("tests")
+    })
+    return _obj
